public enum RideStatus {
    FINDING_DRIVER,
    DRIVER_ASSIGNED,
    DRIVER_REACHED,
    IN_PROGRESS,
    CANCELLED,
    COMPLETED
}
